--- a/print.html
+++ b/print.html
@@ -2901,7 +2901,7 @@ std::shared_ptr&lt;Widget&gt; spw2(new Widget);   //不使用make函数
 <p>一次分配足矣。这是因为<code>std::make_shared</code>分配一块内存，同时容纳了<code>Widget</code>对象和控制块。这种优化减少了程序的静态大小，因为代码只包含一个内存分配调用，并且它提高了可执行代码的速度，因为内存只分配一次。此外，使用<code>std::make_shared</code>避免了对控制块中的某些簿记信息的需要，潜在地减少了程序的总内存占用。</p>
 <p>对于<code>std::make_shared</code>的效率分析同样适用于<code>std::allocate_shared</code>，因此<code>std::make_shared</code>的性能优势也扩展到了该函数。</p>
 <p>更倾向于使用<code>make</code>函数而不是直接使用<code>new</code>的争论非常激烈。尽管它们在软件工程、异常安全和效率方面具有优势，但本条款的建议是，更<strong>倾向于</strong>使用<code>make</code>函数，而不是完全依赖于它们。这是因为有些情况下它们不能或不应该被使用。</p>
-<p>例如，<code>make</code>函数都不允许指定自定义删除器（见<a href="4.SmartPointers/../4.SmartPointers/item18.html">Item18</a>和<a href="4.SmartPointers/../4.SmartPointers/item19.html">19</a>），但是<code>std::unique_ptr</code>和<code>std::shared_ptr</code>有构造函数这么做。有个<code>Widget</code>的自定义删除器：</p>
+<p>例如，<code>make</code>函数都不允许指定自定义删除器（见<a href="4.SmartPointers/../4.SmartPointers/item18.html">Item18</a>和<a href="4.SmartPointers/../4.SmartPointers/item19.html">19</a>），但是<code>std::unique_ptr</code>和<code>std::shared_ptr</code>的构造函数可以接收一个删除器参数。有个<code>Widget</code>的自定义删除器：</p>
 <pre><code class="language-cpp">auto widgetDeleter = [](Widget* pw) { … };
 </code></pre>
 <p>创建一个使用它的智能指针只能直接使用<code>new</code>：</p>
@@ -4464,7 +4464,7 @@ FilterContainer filters;                    //过滤函数
 );
 </code></pre>
 <p>但通过显式的捕获，能更容易看到<em>lambda</em>的可行性依赖于变量<code>divisor</code>的生命周期。另外，写下“divisor”这个名字能够提醒我们要注意确保<code>divisor</code>的生命周期至少跟<em>lambda</em>闭包一样长。比起“<code>[&amp;]</code>”传达的意思，显式捕获能让人更容易想起“确保没有悬空变量”。</p>
-<p>如果你知道一个闭包将会被马上使用（例如被传入到一个STL算法中）并且不会被拷贝，那么在它的<em>lambda</em>被创建的环境中，将不会有持有的引用比局部变量和形参活得长的风险。在这种情况下，你可能会争论说，没有悬空引用的危险，就不需要避免使用默认的引用捕获模式。例如，我们的过滤<em>lambda</em>只会用做C++11中<code>std::all_of</code>的一个实参，返回满足条件的所有元素：</p>
+<p>如果你知道一个闭包将会被马上使用（例如被传入到一个STL算法中）并且不会被拷贝，那么在它的<em>lambda</em>被创建的环境中，将不会有闭包的引用比父函数的局部变量和形参活得长的风险。在这种情况下，你可能会争论说，没有悬空引用的危险，就不需要避免使用默认的引用捕获模式。例如，我们的过滤<em>lambda</em>只会用做C++11中<code>std::all_of</code>的一个实参，返回满足条件的所有元素：</p>
 <pre><code class="language-c++">template&lt;typename C&gt;
 void workWithContainer(const C&amp; container)
 {
